# lol_coach

./: .gitignore  .gitmodules  README.md  kokoro_test.py  main.py  mock_data.json  pyproject.toml  requirements.txt  settings.json  test.py
GUI/: __init__.py  event_handlers.py  gui.py
GUI/components/: __init__.py  agent_chat_tab.py  screenshot_handler.py  settings_tab.py
GUI/events/: __init__.py  custom_events.py
agents/: base_agent.py  build_agent.py  get_item_recipes.py  lolalytics_client.py  macro_agent.py  modelnames.py  scout_agent.py  vision_agent.py
cache_builds/: caitlyn_middle_kassadin_2025-05-15.pkl  cassiopeia_middle_galio_2025-05-11.pkl
data/cache_builds/: ahri_middle_chogath_2025-05-19.pkl  ahri_middle_chogath_2025-05-20.pkl  ahri_middle_chogath_2025-05-25.pkl  aurora_middle_kassadin_2025-05-14.pkl  caitlyn_bottom_kaisa_2025-05-10.pkl  caitlyn_middle_kassadin_2025-05-16.pkl  caitlyn_middle_kassadin_2025-05-17.pkl  cassiopeia_middle_hwei_2025-05-17.pkl  cassiopeia_middle_hwei_2025-05-18.pkl  (+5 more)
database_build/: config.py  data_parser.py  db.py  pipeline.py  riot_api.py
examples/: example_game_state.json  towers_game_state.json
game_context/: game_state.py  game_state_fetcher.py  models.py
game_state/: game_state.py  game_state_fetcher.py  parsers.py
patch_item_data/: items_15.7.1.json  items_15.9.1.json
utils/: get_item_recipes.py  legacy_tts.py  lolalytics_client.py  tts_manager.py
vision/: champion_detector.py  legacy_champion_detector.py  minimap_cropper.py  robust_champion_detector.py  screenshot_listener.py
(+11 files in other folders)
