[project]
name = "lol-coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "openai>=1.77.0",
    "playwright>=1.52.0",
    "requests>=2.32.3",
]
