[project]
name = "lol-coach"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "mss>=10.0.0",
    "openai>=1.77.0",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "pynput>=1.8.1",
    "requests>=2.32.3",
]
