[project]
name = "lol-coach"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dotenv>=0.9.9",
    "google-generativeai>=0.8.5",
    "gtts>=2.5.4",
    "mss>=10.0.0",
    "numpy>=2.0.2",
    "openai>=1.78.1",
    "opencv-python>=4.11.0.86",
    "pillow>=11.2.1",
    "playwright>=1.52.0",
    "pydub>=0.25.1",
    "pygame>=2.6.1",
    "pynput>=1.8.1",
    "pyside6>=6.9.0",
    "pyttsx3>=2.98",
    "requests>=2.32.3",
    "shapely>=2.0.7",
    "urllib3>=2.4.0",
]
